--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
 :root {
   --header-font: "Helvetica Neue", Helvetica, Arial, sans-serif;
   --primary-color: #08b6ce;
+  --text-color: #2a2d2d;
+  --gray: #ccc;
   /* Spacing */
+  --border-radius: 10px;
   --margin-big: 15px;
 }
 
@@ -116,4 +119,32 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Button Styles */
+button {
+  display: inline-block;
+  min-width: 130px;
+  border-radius: var(--border-radius);
+  padding: 7.5px 15px;
+  border: 2px solid var(--primary-color);
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 0.85em;
+  color: var(--text-color);
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
+  text-align: center;
+  transition: all 0.15s;
+}
+button:hover {
+  cursor: pointer;
+  font-weight: bold;
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
+}
+button:focus {
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
